fix overflow

--- a/public/css/secret.css
+++ b/public/css/secret.css
@@ -137,8 +137,7 @@ body {
 
 #main {
     height: 100vh;
-    overflow: scroll;
-    overflow-x: scroll;
+    overflow-y: scroll;
     flex-grow: 1;
     padding-bottom: 100px;
 }
@@ -162,6 +161,8 @@ a { color: #8c8dff; }
 .stream {
     width: 100%;
     max-width: 40rem;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 
 .stream header {
